--- a/1.编译与链接/2.编译预处理.md
+++ b/1.编译与链接/2.编译预处理.md
@@ -2,11 +2,10 @@
 ---
 
 ## 宏与预定义常量
-### 宏`#define`
-**宏**：`#define`在预编译时展开，将相对应位置宏定义替换成文本, 应尽量避免使用宏定义常量
-
-> 使用宏时要非常谨慎，尽量以内联函数、枚举和常量代替
-
+### 1. 宏定义`#define`
+**宏**：`#define`在预编译时展开，将相对应位置宏定义替换成文本, 其作用域范围从定义位置开始，到其当前所在作用域结束
+> 应尽量避免使用宏定义常量，使用宏时要非常谨慎，尽量以内联函数、枚举和常量代替
+#### 1.1 简单宏定义
 ```cpp
 #define FOREVER for(;;) //死循环
 #define CASE break;case 
@@ -16,32 +15,36 @@
 ```cpp
 #define PI 3.14
 ```	
-
-如果必须使用宏，尽量用括号把宏参数括起来，全局名字一定要使用作用域解析符:
+#### 1.2 带参数的宏定义
+`#define <宏名>(<参数表>) <宏体>`
+> 宏体中出现的参数，如果必须使用宏需要注意：
+> 1. 尽量用`()`把每个宏参数括起来
+> 2. 整个宏体也要使用`()`括起来
+> 3. 全局名字一定要使用作用域解析符`::`
 
 ```cpp
 #define MIN(a, b) (((a)<(b))?(a):(b))
 ```	
-### const常量
+### 2. `const`常量
 //TODO
 
-### enum hack
+### 3. `enum hack`
 **作用**：`#define`进行的是字符串替换，不利于程序调试，而且不容易控制范围。使用enum hack可以定义一个枚举常量，而且不会导致不必要的内存分配。
 
 ```cpp
 enum {value = 1};
 ```
 
-> - enum hack比较像`#define`而不像`const`，比如对`enum`取址不合法；
+> - `enum hack`比较像`#define`而不像`const`，比如对`enum`取址不合法；
 > - `enum`和`#define`一样不会导致非必要的内存分配；
-> - enum hack是模板元编程的一项基本技术，大量的代码在使用
+> - `enum hack`是模板元编程的一项基本技术，大量的代码在使用
 > - `enum`定义的常量，并不是在预编译的时候进行替换，只是在编译的时候，根据标识去常量区获取对应的值
 
-### constexpr
+### 4. `constexpr`
 //TODO
 
 ---
-## 头文件
+## 附录：头文件
 ### 万能头文件
 > - 头文件: 作为一种包含功能函数、数据接口声明的载体文件，主要用于保存程序的声明
 > 包含STL以及[常用头文件](#jump)的, 可用[LeetCode](https://leetcode-cn.com/)等刷题网站
@@ -49,7 +52,6 @@ enum {value = 1};
 #include <bits/stdc++.h> // gcc编译器可用, vs不支持
 ```
 
----
 ### <span id="jump">常用头文件及其作用</span>
 > ```cpp
 > #include <algorithm>　　　	//STL 通用算法
