--- a/2.基础/1.作用域与生命期.md
+++ b/2.基础/1.作用域与生命期.md
@@ -4,12 +4,12 @@
 #### 声明域
 #### 潜在作用域
 #### 作用域
-### 命名空间`namespace`
-- `namespace`的成员位于相同的作用域中，无须特殊符号可以访问，命名空间外访问需要域解析符`::`
+### 名字空间`namespace`
+- `namespace`的成员位于相同的作用域中，无须特殊符号可以访问，名字空间外访问需要域解析符`::`
 
 ```cpp
 namespace mynamespace{
-	// 该命名空间下的成员和函数
+	// 该名字空间下的成员和函数
 	...
 }
 
@@ -21,9 +21,9 @@ namespace mynamespace{
     cout << "cout可以不适用std::cout";
  } // namespace std
 ```
-- 命名空间别名
+- 名字空间别名
 
-	可以为命名空间长名起一个别名：
+	可以为名字空间长名起一个别名：
 	```cpp
 	namespace Glib = Graph_lib;
 	```
