--- a/4.函数/2.函数参数.md
+++ b/4.函数/2.函数参数.md
@@ -1,5 +1,5 @@
-
-### 实参类型都相同：initializer_list类模板
+## 不定参数
+### 1. 实参类型都相同：`initializer_list`类模板
 initializer_list提供的操作：
 initializer_list<T> lst：默认初始化；T类型元素的空列表
 initializer_list<T> lst{a,b,c...}：lst的元素数量和初始值一样多；lst的元素是对应初始值的副本；列表中的元素是const
@@ -15,7 +15,8 @@ void error_msg(initializer_list<string> ls){
 } //输出错误信息的数
 ```
 
-### 类型不同：可变参数的模板
-### 用省略号(...)结束参数列表(前两种不可用时)
+### 2. 参数类型不同：[可变参数的模板](..\5.泛型\5.可变参数模板.md)
+### `...`参数列表
+(前两种不可用时)
 
 
