--- a/7.内存模型/2.堆和栈.md
+++ b/7.内存模型/2.堆和栈.md
@@ -1,7 +1,7 @@
 栈：Stack, 存在于某作用域(scope)的一块内存空间。函数本体内声明的任何变量，使用的内存块都在Stack。例如调用函数时，函数本身会形成一个stack用来放置接收的参数和返回地址。Stack分配的内存会在变量消亡时自动回收
-堆：Heap, 由操作系统提供的一块global内存空间，由程序new动态分配的区块，需要手动回收
+堆：Heap, 由操作系统提供的一块global内存空间，由程序`new`动态分配的区块，需要手动回收
 1. 碎片问题：
-○ 对于堆来讲，频繁的new/delete势必会造成内存空间的不连续，从而造成大量的碎片，使程序效率降低。对于栈来讲，则不会存在这个问题，因为栈是先进后出的队列，他们是如此的一一对应，以至于永远都不可能有一个内存块从栈中间弹出，在他弹出之前，在他上面的后进的栈内容已经被弹出，详细的可以参考数据结构。
+○ 对于堆来讲，频繁的`new`/`delete`势必会造成内存空间的不连续，从而造成大量的碎片，使程序效率降低。对于栈来讲，则不会存在这个问题，因为栈是先进后出的队列，他们是如此的一一对应，以至于永远都不可能有一个内存块从栈中间弹出，在他弹出之前，在他上面的后进的栈内容已经被弹出，详细的可以参考数据结构。
 2. 生长方向：
 ○ 对于堆来讲，生长方向是向上的，也就是向着内存地址增加的方向；对于栈来讲，它的生长方向是向下的，是向着内存地址减小的方向增长。
 3. 分配方式：
