--- a/7.内存模型/6.智能指针与内存回收.md
+++ b/7.内存模型/6.智能指针与内存回收.md
@@ -3,23 +3,25 @@
 ### 1. `auto_ptr`
 自C++11开始已经弃用
 ### 2. `unique_ptr`
-`unique_ptr`互斥的所有权
-拥有一个对象，保存一个指针，并负责用释放器销毁对象(默认版本无释放器，直接调用`delete`)
-不能拷贝，但可以移动
+- `unique_ptr`拥有互斥的所有权
+- 拥有一个对象，保存一个指针，并负责用释放器销毁对象(默认版本无释放器，直接调用`delete`)
+- 不能拷贝，但可以移动
 ![20190911151835.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190911151835.png)
 
 
 ### 3. `shared_ptr`
+> 智能指针的实现见[类似指针的类](../3.类与对象/8.类似指针的类.md)
 
-
-`shared_ptr`共享的所有权
-由引用计数实现，当计数为0时才销毁负责的对象
-可以理解为包含两个指针的结构：一个指向对象，一个指向计数器
+- `shared_ptr`拥有共享的所有权
+- 由引用计数实现，当计数为0时才销毁负责的对象
+- 可以理解为包含两个指针的结构：一个指向对象，一个指向计数器
 ![20190911151848.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190911151848.png)
 > 尽量使用`unique_ptr`，因为`shared_ptr`：循环链表可能资源泄漏(需要`weak_ptr`打破)、资源占用更高、多线程防止计数的数据竞争代价很高
 
 ### 4. `weak_ptr`
-`weak_ptr`打破循环共享数据的回路
-指向一个`shared_ptr`管理的对象，为了访问对象，可以使用成员函数`lock()`将其转换为`shared_ptr`
+#### 智能指针的循环引用
+
+- `weak_ptr`结合`shared_ptr`使用，打破循环共享数据的回路
+- 指向一个`shared_ptr`管理的对象，为了访问对象，可以使用成员函数`lock()`将其转换为`shared_ptr`
 ![20190911152008.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190911152008.png)
 
