--- a/3.类与对象/6.虚函数与多态.md
+++ b/3.类与对象/6.虚函数与多态.md
@@ -1,6 +1,7 @@
 [TOC]
-## 1. 虚函数 
 ---
+
+## 1. 虚函数 
 **虚函数**是可在派生类中覆盖其行为的成员函数。与非虚函数相反，即使没有关于该类实际类型的编译时信息，仍然保留被覆盖的行为。==虚函数的唯一用途就是构成运行时的多态。==
 > [重载和覆盖的区别](4.函数\3.函数重载.md)
 
@@ -70,34 +71,19 @@ a. 派生类的对象可以隐含转换为基类对象；
 b. 派生类的对象可以初始化基类的引用；
 c. 派生类的指针可以隐含转换为基类的指针
 
-1. 虚函数注意事项：
-2. 只需要在虚函数的声明处加上 virtual 关键字，函数定义处可以加也可以不加。
-3. 可以只将基类中的函数声明为虚函数，这样所有派生类中具有遮蔽（覆盖）关系1同名函数都将自动成为虚函数。
-4. 在基类中定义了虚函数时，如果派生类没有定义新的函数来遮蔽此函数，那么将1用基类的虚函数。
-5. 只有派生类的虚函数遮蔽基类的虚函数（函数原型相同）才能构成多态。
-6. 构造函数不能是虚函数。因为构造函数不能被继承
-7. 析构函数可以声明为虚函数，而且有时候必须被声明成虚函数（析构时防止析构函数只析构基类而不析构派生类）
+> 虚函数注意事项：
+> 1. 只有类的成员函数才能声明为虚函数。
+> 2. 只需要在虚函数的声明处加上`virtual` 键字，函数定义处可以加也可以不加(最好加上，使程序更加清晰)。
+> 3. 在基类中定义了虚函数时，如果派生类没有定义新的函数来遮蔽此函数，那么将1用基类的虚函数。
+> 4. 只有派生类的虚函数遮蔽基类的虚函数（函数原型相同）才能构成多态。
+> 5. 静态成员函数不能使虚函数，因为它不受限于某个对象。
+> 6. 内联函数不能是虚函数。
+> 7.  构造函数不能是虚函数。因为构造函数不能被继承
+> 8.  析构函数可以声明为虚函数，而且有时候必须被声明成虚函数（析构时防止析构函数只析构基类而不析构派生类）
+
 构成多态的条件：
     a. 必须存在继承关系；
     b. 继承关系中必须有同名的虚函数，并且它们是遮蔽（覆盖）关系。
     c. 存在基类的指针，通过该指针调用虚函数。
-虚函数实现：
-> 将虚函数名转换为虚函数表(vbtl)中的一个索引，每个虚函数都有自己的vbtl用来标识虚函数
 
 
-
-- 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
-- “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
-- “RTTI information”是一个对象指针，它用于唯一地标识该类型。
-“virtual function pointers”也就是我们之前理解的虚函数表，其中存放着虚函数指针列表
-
-## 虚函数表与虚指针
-**虚函数实现**：将虚函数名转换为虚函数表(vbtl)中的一个索引，每个虚函数都有自己的vbtl用来标识虚函数
-![20190903104536.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104536.png)
-
-
-![20190903104551.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104551.png)
-- 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
-- “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
-- “RTTI information”是一个对象指针，它用于唯一地标识该类型。
-“virtual function pointers”也就是我们之前理解的虚函数表，其中存放着虚函数指针列表。
