--- a/7.内存模型/5.类对象大小和空基类优化.md
+++ b/7.内存模型/5.类对象大小和空基类优化.md
@@ -1,3 +1,11 @@
+### 类对象大小
+> 1. 虚函数本身、成员函数（包括静态与非静态）和静态数据成员都是不占用类象的存储空间的
+> 2. 空类、单一继承的空类、多重继承的空类所占空间大小为：1字节
+> 3. 当类中声明了虚函数（不管是1个还是多个），那么在实例化对象时，编译器自动在对象里安插一个`指针vPtr`指向`虚函数表VTable`；
+> 4. 虚承继的情况：由于涉及到虚函数表和虚基表，会同时增加一个（多重虚继承下对应多个）`vfPtr指针`指向`虚函数表vfTable`和一个`vbPtr指针`指向`虚基表vbTable`，这两者所占的空间大小总共为：8（或8乘以多继承时父类的个数）；
+==类对象的大小===各非`static`数据成员（包括父类的非静态数据成员但都不包括所有的成员函数）的总和 + `vfptr指针`(多继承下可能不止一个) + `vbptr指针`(多继承下可能不止一个)+编译器内存对齐增加的字节。
+
+### 空基类优化
 为保证同一类型的不同对象地址始终有别，要求任何对象或成员子对象（除非为 `[[no_unique_address]]` (C++20 起)的大小至少为 1，即使该类型是空的类类型（即没有非静态数据成员的 class 或 struct）也是如此。
 
 然而，基类子对象不受这种制约，而且可以完全从对象布局中被优化掉：
