--- a/7.内存模型/2.堆栈、new和delete.md
+++ b/7.内存模型/2.堆栈、new和delete.md
@@ -1,5 +1,5 @@
 ## `new`和`delete`
-new/delete, new[]/delete[]位于<new>头文件中，返回类型为指向其类型初始化对象的指针，不负责初始化得到的内存
+`new`/`delete`, `new[]`/`delete[]`位于`<new>`头文件中，返回类型为指向其类型初始化对象的指针，不负责初始化得到的内存
 
 ```cpp
 void *operator new(size_t);
@@ -9,7 +9,6 @@ void *operator delete[](void *p);
 ```
 ### 1. `new`操作符
 先分配内存，再调用`ctor`(构造函数)，内部调用`malloc()`
-
 
 ```cpp
 // 
