--- a/3.类与对象/3.成员类型关键词.md
+++ b/3.类与对象/3.成员类型关键词.md
@@ -40,7 +40,7 @@ inline T* shared_ptr<T>::operator->() const{
 - `const`**成员变量**：和普通变量用法相似，只能通过参数初始化列表初始化
 - `const`**对象**：将对象定义为常对象后，就只能访问被`const`修饰的成员（非`const`成员可能会修改对象数据，编译器是禁止的，因此不改变数据的成员函数必须加`const`）
 - `const`**成员函数**（常成员函数）：可以使用类中所有成员变量，但是不能修改它们的值，在定义和声明的时候都要在结尾加上`const`关键词
-> 实际上`const`修饰的是隐式的`this`指针
+> **注意**：`const`成员函数中，实际上`const`修饰的是`*this`指针，因此`const`成员函数不可以修改非`static`成员(可以修改`static`和`mutable`修饰的成员变量，因为`static`不属于子对象)
 
 ```cpp
 int gethour() const; //类内
@@ -52,10 +52,10 @@ void Clock::gethour() const{
 > 2. `const`成员函数声明和定义都必须使用`const`后缀
 > 3. `const`对象只能调用`const`成员函数，不能调用非`const`成员函数
 
-**`mutable`**：容许在即便包含它的对象被声明为`const`时仍可修改声明为`mutable`的类成员。如果需要一部分成员变量能在`const`对象中修改，可以加上`mutable`修饰：
+**`mutable`**：容许在即便包含它的对象被声明为`const`时仍可修改声明为`mutable`的类成员。如果需要一部分成员变量能在`const`成员函数中修改(用于改变`const`对象)，可以加上`mutable`修饰：
 
 ```cpp
-mutable string cache;
+mutable bool flag;
 ```
 
 ### `static`关键词
@@ -66,7 +66,7 @@ mutable string cache;
 **作用**：使用`static`成员变量来实现多个对象共享数据（如计数器）。
 > 1. 函数体内`static`变量的作用范围为该函数体, 不同于普通成员变量, 该变量的内存只被分配一次, 因此其值在下次调用时仍维持上次的值
 > 2. 在模块内的`static`全局变量可以被模块内所有函数访问，但不能被模块外其他函数访问
-> 3. 在类的static 成员变量属于整个类所拥有，对类的所有对象只有一份拷贝
+> 3. 在类的`static`成员变量属于整个类所拥有，对类的所有对象只有一份拷贝
 > 4. `static`成员变量不占用对象的内存，而是在所有对象之外开辟内存，即使不创建对象也可以访问。
 
 ```cpp
@@ -93,10 +93,10 @@ public:
 > - `static`成员变量既可以通过对象来访问，也可以通过`classname::member`来访问
 > 
 #### 静态成员函数
-> 没有对象的时候要访问类成员函数的话，只能访问静态成员函数
-> 静态成员函数主要目的是访问静态成员变量。
-> 在类中的 static 成员函数属于整个类所拥有，这个函数不接收 this 指针，因而只能访问类的 static 成员变量
-> 4. 在模块内的static 函数只可被这一模块内的其他函数调用，这个函数的使用范围被限制在声明它的模块内
+> 1. 没有对象的时候要访问类成员函数的话，只能访问`static`成员函数
+>2.  静态成员函数主要目的是访问`static`成员变量。
+> 3. 在类中的`static`成员函数属于整个类所拥有，这个函数不接收`this`指针，因而只能访问类的`static`成员变量
+> 4. 在模块内的`static`函数只可被这一模块内的其他函数调用，这个函数的使用范围被限制在声明它的模块内
 > 
 
 操作 | 说明
