--- a/3.类与对象/6.虚函数与多态.md
+++ b/3.类与对象/6.虚函数与多态.md
@@ -67,9 +67,9 @@ Line *p = new Cube(5);//纯虚函数可以实现多态
 > - 指针和引用都可以实现多态，但是引用不如指针灵活
 
 • `public`派生类对象可以被当做基类对象使用，反之不行。基类对象名、指针只能使用从基类继承的成员
-a. 派生类的对象可以隐含转换为基类对象；
-b. 派生类的对象可以初始化基类的引用；
-c. 派生类的指针可以隐含转换为基类的指针
+1. 派生类的对象可以隐含转换为基类对象；
+2. 派生类的对象可以初始化基类的引用；
+3. 派生类的指针可以隐含转换为基类的指针
 
 > 虚函数注意事项：
 > 1. 只有类的成员函数才能声明为虚函数。
@@ -82,8 +82,8 @@ c. 派生类的指针可以隐含转换为基类的指针
 > 8.  析构函数可以声明为虚函数，而且有时候必须被声明成虚函数（析构时防止析构函数只析构基类而不析构派生类）
 
 构成多态的条件：
-    a. 必须存在继承关系；
-    b. 继承关系中必须有同名的虚函数，并且它们是遮蔽（覆盖）关系。
-    c. 存在基类的指针，通过该指针调用虚函数。
+    1. 必须存在继承关系；
+    2. 继承关系中必须有同名的虚函数，并且它们是遮蔽（覆盖）关系。
+    3. 存在基类的指针，通过该指针调用虚函数。
 
 
