--- a/4.函数/3.函数重载.md
+++ b/4.函数/3.函数重载.md
@@ -2,8 +2,8 @@
 ### 重载和覆盖的区别
 > 1. 重载是在同一个类或作用域中，覆盖是在子类和父类中(不同作用域)
 > 2. 覆盖要求参数列表相同，重载要求参数列表不同，当虚函数返回类型或参数不一样时将会造成函数的隐藏而不是覆盖
-覆盖的方法不能为`private`
-> 3. 覆盖返回类型必须一致(抛出异常也要一致)，重载可以不一致
+> 3. 覆盖的方法不能为`private`
+> 4. 覆盖返回类型必须一致(抛出异常也要一致)，重载可以不一致
 ### 运算符重载
 **概念**：运算符重载是通过函数实现的，本质上是函数重载。`oprator`是关键字，用来定义重载运算符的函数。可以将`operator运算符`看作函数名。
 > - 运算符函数或者是类的成员，或者至少含有一个类类型的参数（无法改变内置类型运算符的含义）
