--- a/8.STL标准库/容器.md
+++ b/8.STL标准库/容器.md
@@ -1,6 +1,9 @@
+容器中存放的数据大小
+
+
 ## 顺序容器
 ### 0. 字符串`string` 
-string类需要包含头文件`<string>`，以及命名空间`std`，其不同于C风格字符串，末尾没有`'\0'`，长度为真实长度
+`string`类需要包含头文件`<string>`，以及命名空间`std`，其不同于C风格字符串，末尾没有`'\0'`，长度为真实长度
 初始化：
 ```cpp
 string s; //空字符串
@@ -9,10 +12,10 @@ string s("C plus plus");
 string s(5, 's'); //初始化成"sssss"
 ```
 1. 原始字符串：用于正则表达式的字符串, 括号内就是原始的字符串，不需要用转义符号\
-```cpp
-string s = R"("hello")";
-string s = R"***("hello"(()())***";  // )***"这一部分，)和"中间可以是任意符号，但是必须和"***(匹配
-```
+    ```cpp
+    string s = R"(\hello)"; // "\hello"
+    string s = R"***("hello"(()())***";  // 自定义定界符 )***"这一部分，)和"中间可以是任意符号，但是必须和"***(匹配
+    ```
 4. string类常用：
 string.length()	字符串长度
 string.size()
