--- a/7.内存模型/3.虚函数表与虚指针.md
+++ b/7.内存模型/3.虚函数表与虚指针.md
@@ -1,10 +1,30 @@
 ## 虚函数表与虚指针
-**虚函数实现**：将虚函数名转换为虚函数表(vbtl)中的一个索引，每个虚函数都有自己的vbtl用来标识虚函数
-![20190903104536.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104536.png)
+**虚函数底层实现**：每个类对象中都存在一个虚指针vptr指向当前类的虚函数表vtbl，虚函数表中存储着对应虚函数的地址
 
-
-![20190903104551.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104551.png)
-- 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
-- “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
-- “RTTI information”是一个对象指针，它用于唯一地标识该类型。
-“virtual function pointers”也就是我们之前理解的虚函数表，其中存放着虚函数指针列表。
+![20191018100806.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20191018100806.png)
+类`B`继承于`A`，`A`中存在虚函数`vfunc1()`和` vfunc2()`，`B`中覆盖了`A`中的虚函数`vfunc1()`和非虚成员函数`func2()`，如下述代码所示：
+```cpp
+class A{
+public:
+    virtual void vfunc1();
+    virtual void vfunc2();
+    void func1();
+    void func2();
+private:
+    int data1_;
+};
+class B:public A{
+public:
+    virtual void vfunc1();
+    void func2();
+private:
+    int data2_;
+};
+```
+对于一个指向类的对象的指针`p`，调用虚函数`p->vfunc();`，解析成C语言相当于`(*ptr->vptr[n])()`
+> #### 虚函数表vtbl的结构模型
+> ![20190903104551.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104551.png)
+> - 橙色线框中的内容仅限于虚拟继承的情形（若无虚继承，则无此内容）
+> - “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
+> - “RTTI information”是一个对象指针，它用于唯一地标识该类型。
+> “virtual function pointers”也就是我们之前理解的虚函数表，其中存放着虚函数指针列表。
