--- a/2.基础/9.说明符与限定符.md
+++ b/2.基础/9.说明符与限定符.md
@@ -1,8 +1,8 @@
-## 1. 说明符
+## 说明符
 ---
-### 1.1. 存储类说明符
-### 1.2. `alignas`说明符 (C++11)
-### 1.3. `decltype`说明符(C++11)
+### 1. 类型说明符
+#### 1.1 `alignas`说明符 (C++11)
+#### 1.2 `decltype`说明符(C++11)
 **`decltype`**：检查 *实体* 的声明类型，或 *表达式* 的类型和值类别(包括顶层const和引用)
 ```cpp
 decltype(f()) sum = x;//sum的类型是f的返回类型
@@ -21,6 +21,7 @@ decltype((i)) n = a; //编译器认为(i)为表达式，得到左值引用，如
 > 注意如果对象的名字带有括号，则它被当做通常的左值表达式，从而 decltype(x) 和 decltype((x)) 通常是不同的类型。
 > 在难以或不可能以标准写法进行声明的类型时，decltype 很有用，例如 lambda 相关类型或依赖于模板形参的类型。
 ### 占位符类型说明符
+
 #### `auto`类型说明符
 `auto`让编译器通过初始值来推算变量类型，`auto`定义的变量必须有初始值
 ```cpp
