--- a/3.类与对象/3.成员类型关键词.md
+++ b/3.类与对象/3.成员类型关键词.md
@@ -9,7 +9,7 @@
 2. 当参数与成员变量名相同时，如`this->n = n;` （不能写成`n = n`）
 > 1. 用在类的内部，是一个`const`指针，指向当前对象，可以用->来访问当前对象的成员变量或成员函数
 > 2. `this`是`const`指针，不能被修改，==只能在成员函数内部使用==，用在其他地方是非法的
-> 3. `this`实质上是成员函数的一个形参，在调用成员函数时将对象地址作为实参传递给`this`, 在编译阶段由编译器自动将其添加到参数列表
+> 3. `this`实质上是成员函数的一个形参，在调用成员函数时将对象地址作为实参传递给`this`, 在编译阶段由编译器自动将其添加到参数列表(成员函数有一个隐藏的参数`this`)
 > 4. `this`是一个右值，不能取得`this`的地址(不能`&this`)
 
 ### `inline`关键词
@@ -33,6 +33,7 @@ inline T* shared_ptr<T>::operator->() const{
 ```
 
 内联函数比较简单，当形式复杂时，编译器不会将其编译为内联函数
+声明有 constexpr 的函数是隐式的内联函数。
 
 
 ### `const`与`mutable`关键词
