--- a/7.内存模型/3.虚函数表与虚指针.md
+++ b/7.内存模型/3.虚函数表与虚指针.md
@@ -2,7 +2,11 @@
 **虚函数实现**：将虚函数名转换为虚函数表(vbtl)中的一个索引，每个虚函数都有自己的vbtl用来标识虚函数
 ![20190903104536.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104536.png)
 
-
+`*(p->vptr[n])(p);`
+`this->func();`
+`*(this->vptr[n])(this);`
+动态绑定(Dynamic Binding)：通过指针或引用向上转型调用虚函数，发生在运行期
+静态绑定(Static Binding)：通过对象直接调用函数，对象在声明时类型已确定，发生在编译期
 ![20190903104551.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104551.png)
 - 橙色线框中的内容仅限于虚拟继承的情形（若无虚拟继承，则无此内容）
 - “offset to top”是指到对象起始地址的偏移值，只有多重继承的情形才有可能不为0，单继承或无继承的情形都为0。
