--- a/3.类与对象/1.类与对象.md
+++ b/3.类与对象/1.类与对象.md
@@ -2,11 +2,11 @@
 ---
 ## 1. 什么是类
 
-> 1. `class`是用户自定义类型，可以定义;
-> 2. 一个类是包含其成员的命名空间;
+> 1. `class`是用户自定义类型
+> 2. 一个类是包含其成员的`namespace`
 > 3. 可以为类定义运算符，如`+`, `!`和`[]`
 > 4. 类是一个模板，编译后不占用内存空间，所以定义类时不能对类进行初始化，只能创建对象的时候初始化;
-> 5. 类在声明前不能定义对象，但是可以定义其指针
+> 5. 类在声明前不能定义对象，但是可以定义其指针类型
 
 
 ```cpp
@@ -37,14 +37,11 @@ private: // 私有成员
 > - 更多关于`struct`, `enum`, `union`可见[数据类型](..\2.基础\数据类型.md)
 ---
 ## 2. 什么是对象
-### 对象的访问
-访问成员（创建对象后）
-对象使用	today.display();
-指向对象的指针使用`->`	ptoday->display();
+
 
 ### 类与对象的关系
 
 `static`成员, 成员函数属于类
-成员变量属于对象
+成员变量属于该类的object
 
 ---
