--- a/3.类与对象/2.构造函数与析构函数.md
+++ b/3.类与对象/2.构造函数与析构函数.md
@@ -18,17 +18,16 @@ private:
 ```
     
 ### 1. 参数初始化列表：
-**初始化列表作用**：在构造函数中对成员变量一一赋值
+**作用**：在构造函数中对成员变量赋值，其效率比
 ```cpp
 Clock::Clock(int hour,int minute,int second):hour_(hour),minute_(minute), second_(second){};
 ```
-> 1. ==初始化`const`成员变量只能用参数初始化列表==
-> 2. 参数初始化表并没有效率上的优势，仅仅是书写方便
-> 3. 参数初始化顺序与初始化表列出的变量的顺序无关，它只与成员变量在类中声明的顺序有关
+> 1. ==初始化`const`成员变量、引用只能用参数初始化列表==
+> 2. 参数初始化顺序只与成员变量在类中声明的顺序有关，与初始化表列出的变量的顺序无关
 ### 2. 默认构造函数：
 作用：
-不能定义两个带初始值的默认构造函数（会报错）。程序中已定义构造函数，编译器不再隐含生成，如果希望，可以使用：Clock()=default;调用没有参数的构造函数可以省略括号：Clock today;
-=default 可以写在声明处也可以写在定义处
+不能定义两个带初始值的默认构造函数（会报错）。程序中已定义构造函数，编译器不再隐含生成，如果希望，可以使用：A()=default;调用没有参数的构造函数可以省略括号：Clock today;
+`=default` 可以写在声明处也可以写在定义处
 ### 3. 拷贝构造函数：
 **拷贝构造函数作用**：类内成员变量含指针、动态分配的内存时，必须定义拷贝构造函数进行深拷贝，否则可以不定义。
 > 1. 类内成员变量含指针、动态分配的内存时，必须定义拷贝构造函数进行深拷贝；
@@ -88,10 +87,11 @@ People(name, age), score_(score){
 定义派生类构造函数时应指明基类构造函数，否则就调用基类的默认构造函数。如果基类没有默认构造函数（定义了其他构造函数，编译器不生成隐含的默认构造函数），编译失败
 
 ## 析构函数
-**析构函数作用**：用于销毁对象释放内存。
+**作用**：用于销毁对象释放内存。
 > 1. 一个类只有一个析构函数；
 > 2. 析构函数在销毁对象时自动执行，无法显式调用，没有参数和返回值；
 > 3. 当类中不存在指针、动态分配内存时，可以不指定析构函数；否则必须指定用来释放掉指针所指向内存，避免内存泄漏
+> 4. 使用多态时基类的析构函数必须为`virtual`，否则会造成部分析构而内存泄漏
 
 ```cpp
 Clock::~Clock(){
