--- a/3.类与对象/3.成员类型关键词.md
+++ b/3.类与对象/3.成员类型关键词.md
@@ -166,9 +166,9 @@ public:
 ```
 ### `virtual`, `override`与`final`关键词
 **作用**：
-1. **`virtual`函数**(Virtual Function)见[虚函数与多态](5.虚函数与多态.md)。
+1. **`virtual`函数**(Virtual Function)见[虚函数与多态](6.虚函数与多态.md)。
 2. `override`说明该虚函数必须被覆盖
-    > 1. 是在**成员函数声明符**之后使用时拥有特殊含义的标识符：其他情况下它不是保留的关键词，如果不能覆盖（不是虚函数、形参不对）会出错
+    > 1. 是在**成员函数声明符**之后使用时拥有特殊含义的标识符，其他情况下它不是保留的关键词，如果不能覆盖（不是虚函数、形参不对）会出错
     > 2. 如果没有用`overide`关键字，当虚函数返回类型或参数不一样时将会造成函数的隐藏而不是覆盖
     > 3. 覆盖的方法不能为`private`
 3. `final`用来防止成员函数被覆盖:
