--- a/4.函数/4.转换函数.md
+++ b/4.函数/4.转换函数.md
@@ -1,6 +1,8 @@
 ### 转换函数
 
 > 转换函数(conversion function)：自定义类型转换函数，可以把目标类的类型转换为系统预定义类型的数据
+
+==注意：不同于其他运算符重载，0转换函数没有返回类型，因为其返回类型在其操作符中==
 ```cpp
 // 这是一个类的成员函数
 operator type() const{
