--- a/7.内存模型/3.虚函数表与虚指针.md
+++ b/7.内存模型/3.虚函数表与虚指针.md
@@ -23,6 +23,11 @@ private:
 };
 ```
 对于一个指向类的对象的指针`p`，调用虚函数`p->vfunc();`，解析成C语言相当于`(*ptr->vptr[n])()`
+`*(p->vptr[n])(p);`
+`this->func();`
+`*(this->vptr[n])(this);`
+动态绑定(Dynamic Binding)：通过指针或引用向上转型调用虚函数，发生在运行期
+静态绑定(Static Binding)：通过对象直接调用函数，对象在声明时类型已确定，发生在编译期
 > #### 虚函数表vtbl的结构模型
 > ![20190903104551.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190903104551.png)
 > - 橙色线框中的内容仅限于虚拟继承的情形（若无虚继承，则无此内容）
