--- a/2.基础/8.数组、指针与引用.md
+++ b/2.基础/8.数组、指针与引用.md
@@ -1,23 +1,29 @@
-> **指针与引用的关系与区别**
-> ![20190902144041.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190902144041.png)
-> 1. 引用的底层实现是常量指针，但是从语言层面来讲引用和指针是完全不同的东西
-> 2. 可以用`=`, `+=`, `-=`, `++`, `--`改变指针变量的值(内置类型的运算操作不支持重载)，引用永远对应同一个对象，不可变
-> 3. 指针可以为空，引用不能(指针是一个实体，引用是一个别名)
-> 4. 引用会有类型检查，是类型安全的
----
-## 1. 指针
-- 区别指针类型和所指对象的类型，指针类型对指针的运算产生影响，不会影响指针指向对象的大小
-- 指针的类型必须与所指对象的类型一致。两个例外：
-  1. 可以用指向常量的指针指向非常量对象
-int n = 0;
-const int *p = &n;//n的值可以改变，但是不能通过指针*p修改
-  2. 向上转型（派生类指针赋值给基类指针）
+
+## 1. 数组
+
+
+## 2. 指针
+**概念**：指针是一个变量，其值为另一个变量的内存地址
+> 1. 指针的大小是固定的，在32为系统中为4个字节，64位系统中为8个字节
+> 2. 指针的类型决定了指针运算的内存偏移量(包括`*`, `+`, `-`, `++`, `--`)
+> 3. 指针的类型必须与所指对象的类型一致。两个例外：
+>    1. 可以用指向常量的指针指向非常量对象
+>       ```cpp
+>       int n = 0;
+>       const int *p = &n;//n的值可以改变，但是不能通过指针*p修改
+>       ```
+>    2. 类的多态
+#### 空指针`nullptr`与`NULL`和`0`
+nullptr是C++11标准的关键字
 ```cpp
-unsigned int i = 0xfffffff7;
-char *p = (char*)&i;
-printf("%x\n", *p);//输出结果fffffff7
+void f(int);
+void f(void*);
+f(0); // 调用f(int)
+f(NULL); // 实际调用f(int)，与目标调用不符
+f(nullptr); // 调用f(void*)
 ```
-### 指针与`const`
+### 2.1 指针与数组
+### 2.2 指针与`const`
 #### 顶层`const`：常量指针
 ```cpp
 int *const p = &n; //p不能改变，*p和n可以改变
@@ -30,9 +36,15 @@ int const *p = &n; //意义相同
 
 
 
-## 2. 引用
+## 3. 引用
 **作用**：引用是已存在对象的别名，通常不用于声明变量，而用于参数类型(parameters type)和返回类型(return type)的描述
-### 2.1 左值引用`&`
+> **指针与引用的关系与区别**
+> ![20190902144041.png](https://raw.githubusercontent.com/itisl/Pic_Bed/master/img/20190902144041.png)
+> 1. 引用的底层实现是常量指针，但是从语言层面来讲引用和指针是完全不同的东西
+> 2. 可以用`=`, `+=`, `-=`, `++`, `--`改变指针变量的值(内置类型的运算操作不支持重载)，引用永远对应同一个对象，不可变
+> 3. 指针可以为空，引用不能(指针是一个实体，引用是一个别名)
+> 4. 引用会有类型检查，是类型安全的
+### 3.1 左值引用`&`
 > 1. 引用必须被初始化为指代一个有效的对象或函数，引用被初始化后，就不能再代表其他对象
 > 2. 引用在定义时需要添加`&`，在使用时不能添加`&`。`&`表示取地址。 
 > 3. 使用引用/指针作为函数参数或返回值，需要的内存较小，可以提高程序的效率。
@@ -66,7 +78,7 @@ int& plus(int &n){
 ```cpp
 int*& pnum = p; 
 ```
-### 2.2 右值引用`&&`
+### 3.2 右值引用`&&`
 **作用**：引用对象为临时对象(函数返回值，未命名的自由空间等)，判断对象为临时对象后，可以用廉价的移动操作代替拷贝操作
 > - 右值引用可用于为临时对象延长生存期
 > - 当函数同时具有右值引用和左值引用的重载时，右值引用重载绑定到右值（包含纯右值和亡值），而左值引用重载绑定到左值
