--- a/4.函数/1.函数声明与定义.md
+++ b/4.函数/1.函数声明与定义.md
@@ -1,7 +1,7 @@
 ### 函数声明
 
 ```cpp
-[[noreturn]] static inline auto function(const unsigned long int *const)->void const noexcept;
+[[noreturn]] static inline auto func(const unsigned long int *const)->void const noexcept;
 ```
 1. 必选项：**函数名**，**参数列表**(可以为空`()`)，**返回类型**
 2. 可选项：
@@ -11,6 +11,7 @@
    - `noexcept`函数不允许抛出异常，，属性`[[noreturn]]`不会用常规调用、返回
 
 函数需要调用，必须先定义。定义是特殊的函数声明，需要给出函数体
+函数名add，add、*add、&add三者等价
 
 
 ### 函数返回值
