--- a/1.编译与链接/2.编译预处理.md
+++ b/1.编译与链接/2.编译预处理.md
@@ -25,16 +25,37 @@
 ```cpp
 #define MIN(a, b) (((a)<(b))?(a):(b))
 ```	
-### 2. `const`常量
+
+### 2. `static`静态变量
+### 3. `const`常量
 //TODO
 
-### 3. `enum hack`
-**作用**：`#define`进行的是字符串替换，不利于程序调试，而且不容易控制范围。使用enum hack可以定义一个枚举常量，而且不会导致不必要的内存分配。
+### 4. `enum hack`
+**作用**：`#define`进行的是字符串替换，不利于程序调试，而且不容易控制范围。使用`enum hack`可以定义一个枚举常量，而且也不会导致不必要的内存分配。
 
 ```cpp
-enum {value = 1};
+class box{
+private:
+    enum {volume = 10};
+    int things[volume];
+};
 ```
 
+```cpp
+// 利用enum hack和模板元实现递归版本的阶乘直接求值
+template<unsigned n>
+struct Factorial
+{
+ enum {value = n * Factorial<n-1>::value};
+};
+template<>
+struct Factorial<0>
+{
+ enum {value = 1};
+};
+
+std::cout<<Factorial<10>::value;
+```
 > - `enum hack`比较像`#define`而不像`const`，比如对`enum`取址不合法；
 > - `enum`和`#define`一样不会导致非必要的内存分配；
 > - `enum hack`是模板元编程的一项基本技术，大量的代码在使用
@@ -47,7 +68,7 @@ enum {value = 1};
 ## 附录：头文件
 ### 万能头文件
 > - 头文件: 作为一种包含功能函数、数据接口声明的载体文件，主要用于保存程序的声明
-> 包含STL以及[常用头文件](#jump)的, 可用[LeetCode](https://leetcode-cn.com/)等刷题网站
+> 包含STL以及[常用头文件](#jump)的, 可用[LeetCode](https://leetcode-cn.com/)等在线编程网站
 ```cpp
 #include <bits/stdc++.h> // gcc编译器可用, vs不支持
 ```
