--- a/2.基础/3.左值和右值.md
+++ b/2.基础/3.左值和右值.md
@@ -24,3 +24,5 @@
 可以取左值的地址：&++i[1] 及 &std::endl 是合法表达式。
 可修改的左值可用作内建赋值和内建复合赋值运算符的左操作数。
 左值可用于初始化左值引用；这会将一个新名字关联给该表达式所标识的对象。
+
+只在定义移动构造函数与移动赋值操作时使用右值引用, 不要使用 std::forward 功能函数
