--- a/2.基础/5.数据类型.md
+++ b/2.基础/5.数据类型.md
@@ -1,6 +1,12 @@
 [TOC]
 ---
+> `typename()`表示默认构造函数构造的临时对象
+```cpp
+var1 = int()
 
+```
+## 自定义数据类型
+### `class`：类
 ### `struct`: 结构体
 
 ### `union`: 联合，所有成员都分配在同一地址
