--- a/2.基础/8.数组、指针与引用.md
+++ b/2.基础/8.数组、指针与引用.md
@@ -14,7 +14,7 @@
 >       ```
 >    2. 类的多态
 #### 空指针`nullptr`与`NULL`和`0`
-nullptr是C++11标准的关键字
+`nullptr`是C++11标准的关键字，指针指向`nullptr`代表指针为空
 ```cpp
 void f(int);
 void f(void*);
