--- a/3.类与对象/3.成员类型关键词.md
+++ b/3.类与对象/3.成员类型关键词.md
@@ -59,13 +59,13 @@ void Clock::gethour() const{
 mutable bool flag;
 ```
 
-### `static`关键词
+### [`static`关键词](..\1.编译与链接\2.编译预处理.md)
 > ==static数据或函数成员在整个程序中只能有唯一定义==
 
 #### 静态成员变量
 
 **作用**：使用`static`成员变量来实现多个对象共享数据（如计数器）。
-> 1. 函数体内`static`变量的作用范围为该函数体, 不同于普通成员变量, 该变量的内存只被分配一次, 因此其值在下次调用时仍维持上次的值
+> 1. 函数体内`static`变量的作用范围为该函数体, 在第一次调用时初始化。不同于普通成员变量, 该变量的内存只被分配一次, 因此其值在下次调用时仍维持上次的值
 > 2. 在模块内的`static`全局变量可以被模块内所有函数访问，但不能被模块外其他函数访问
 > 3. 在类的`static`成员变量属于整个类所拥有，对类的所有对象只有一份拷贝
 > 4. `static`成员变量不占用对象的内存，而是在所有对象之外开辟内存，即使不创建对象也可以访问。
@@ -154,6 +154,10 @@ class Clock{
 ### `explicit`关键词
 **作用**：禁止隐式调用单参数的构造函数，包括：
 1. 禁止隐式调用拷贝构造函数
+```cpp
+complex c1(1, 2);
+complex c2 = c1+5; // 此时会隐式调用构造函数complex(5, imag=0)
+```
 2. 禁止类对象之间的隐式转换(见转换函数)
 > - 一般而言，只有单参数的构造函数会用到`explicit`关键字
 > - `explicit`指明构造函数不能作隐式类型转换，只能进行初始化和显式类型转换
@@ -168,14 +172,18 @@ public:
 ### `virtual`, `override`与`final`关键词
 **作用**：
 1. **`virtual`函数**(Virtual Function)见[虚函数与多态](6.虚函数与多态.md)。
-2. `override`说明该函数为虚函数，会覆盖基类中的虚函数，如果不是虚函数会报错
+2. `override`说明编译器会检查该函数是否为虚函数，是否会覆盖基类中的虚函数，如果不是虚函数会报错
     > ```cpp
     > void func() override{} // 子类中使用
     > ```
     > 1. 是在**成员函数声明符**之后使用时拥有特殊含义的标识符，其他情况下它不是保留的关键词，如果不能覆盖（不是虚函数、形参不对）会出错
     > 2. 如果没有用`overide`关键字，当虚函数返回类型或参数不一样时将会造成函数的隐藏而不是覆盖
     > 3. 覆盖的方法不能为`private`
-3. `final`用来防止成员函数被覆盖:
+3. `final`用来防止类被继承(用于类定义类名后面)或成员函数被覆盖(用于成员函数后)
     ```cpp
+    class base final{};
     void setname() final;
     ```
+
+### `using`关键词
+**作用**：`using`可以在派生类中使用基类的成员，无论继承方式为`private`/`protected`
