--- a/4.函数/1.函数声明与定义.md
+++ b/4.函数/1.函数声明与定义.md
@@ -11,7 +11,7 @@
    - `noexcept`函数不允许抛出异常，，属性`[[noreturn]]`不会用常规调用、返回
 
 函数需要调用，必须先定义。定义是特殊的函数声明，需要给出函数体
-函数名add，add、*add、&add三者等价
+函数名就是函数地址`func`，`func`、`*func`、`&func`三者等价
 
 
 ### 函数返回值
