--- a/2.基础/9.C++关键字.md
+++ b/2.基础/9.C++关键字.md
@@ -1,25 +1,25 @@
 ## 说明符
 ---
 ### 1. 类型说明符
-#### 1.1 `alignas`说明符 (C++11)
-#### 1.2 `decltype`说明符(C++11)
-**`decltype`**：检查 *实体* 的声明类型，或 *表达式* 的类型和值类别(包括顶层const和引用)
+#### 1.1 `alignas`说明符
+#### 1.2 `decltype()`说明符
+**作用**：声明返回类型(包括顶层`const`和引用)
 ```cpp
 decltype(f()) sum = x;//sum的类型是f的返回类型
 decltype((i)) n = a; //编译器认为(i)为表达式，得到左值引用，如果i为普通变量，最终结果n也是a的引用
 ```
-> 1) 若实参是指名某个结构化绑定的无括号的标识表达式，则 decltype 产生被引用类型（在关于结构化绑定声明的说明中有所描述）。(C++17 起)
-> 2) 若实参是指名某个非类型模板形参的无括号的标识表达式，则 decltype 生成该模板形参的类型（当该模板形参以占位符类型声明时，则为进行任何所需的类型推导后的类型）。(C++20 起)
-> 3) 若实参为无括号的标识表达式或无括号的类成员访问表达式，则 decltype 产生以此表达式命名的实体的类型。若无这种实体，或该实参指名某个重载函数，则程序非良构。
-> 4) 若实参是其他类型为 T 的任何表达式，且
-> a) 若 表达式 的值类别为亡值，则 decltype 产生 T&&；
-> b) 若 表达式 的值类别为左值，则 decltype 产生 T&；
-> c) 若 表达式 的值类别为纯右值，则 decltype 产生 T。
+> 1. 若实参是指名某个结构化绑定的无括号的标识表达式，则`decltype`产生被引用类型（在关于结构化绑定声明的说明中有所描述）。(C++17 起)
+> 2. 若实参是指名某个非类型模板形参的无括号的标识表达式，则`decltype`生成该模板形参的类型（当该模板形参以占位符类型声明时，则为进行任何所需的类型推导后的类型）。(C++20 起)
+> 3. 若实参为无括号的标识表达式或无括号的类成员访问表达式，则`decltype`产生以此表达式命名的实体的类型。若无这种实体，或该实参指名某个重载函数，则程序非良构。
+> 4. 若实参是其他类型为 T 的任何表达式，且
+>    - 若 表达式 的值类别为亡值，则`decltype`产生 T&&；
+>    - 若 表达式 的值类别为左值，则`decltype`产生 T&；
+>    - 若 表达式 的值类别为纯右值，则`decltype`产生 T。
 > 若 表达式 是返回类类型纯右值的函数调用，或是右操作数为这种函数调用的逗号表达式，则不对该纯右值引入临时量。(C++17 前)
 > 若 表达式 是除了（可带括号的）立即调用以外的 (C++20 起)纯右值，则不从该纯右值实质化临时对象。(C++17 起)
-> 不需要该类型完整或拥有可用的析构函数，而且类型可以是抽象的。此规则不适用于其子表达式：decltype(f(g())) 中，g() 必须有完整类型，但 f() 不必。
-> 注意如果对象的名字带有括号，则它被当做通常的左值表达式，从而 decltype(x) 和 decltype((x)) 通常是不同的类型。
-> 在难以或不可能以标准写法进行声明的类型时，decltype 很有用，例如 lambda 相关类型或依赖于模板形参的类型。
+> 不需要该类型完整或拥有可用的析构函数，而且类型可以是抽象的。此规则不适用于其子表达式：`decltype`(f(g()))中，g()必须有完整类型，但f()不必。
+> 注意如果对象的名字带有括号，则它被当做通常的左值表达式，从而`decltype(x)`和 `decltype((x))`通常是不同的类型。
+> 在难以或不可能以标准写法进行声明的类型时，`decltype` 很有用，例如`lambda`相关类型或依赖于模板形参的类型。
 ### 占位符类型说明符
 
 #### `auto`类型说明符
@@ -69,3 +69,17 @@ constexpr int Bad2(int a){
 ```cpp
 [[noreturn]] void exit(int); //exit永远不会返回任何结果
 ```
+### `using`
+> 1. `using`可以用于`namespace`和`namespace`中的成员
+> 2. `using`可以用于类型别名和模板别名
+> 3. [`using`用于类的成员中](..\3.类与对象\3.成员类型关键词.md)，可以在派生类中指定使用基类的某个成员(即使该成员为`private`/`protected`，包括基类的构造函数)
+
+### `noexcept`
+**作用**：表明一个函数不会抛出异常
+```cpp
+void swap(int, int) noexcept{};
+// 也可以加上判断
+void swap(int, int) noexcept(if a>b){};
+```
+
+### `decltype`
