--- a/5.泛型/2.类模板.md
+++ b/5.泛型/2.类模板.md
@@ -35,5 +35,13 @@ auto *pP3 = new Point<int,int>(1,2);
 > 4. 在类外定义成员函数时，`template`后面的类型参数要和类声明时的一致
 > 5. 注意：模板类支持默认参数，模板函数不支持
 
+### 模板别名
+**作用**：为模板设置别名并能够自己指定参数类型
+```cpp
+template <class T>
+using vec = std::vector<T>;
+vec<int> v1{1, 2};
 
-
+using vec_int = std::vector<int>;
+vec_int v2{1, 2}; // 不使用模板只能事先定义模板参数
+```
