--- a/5.泛型/5.可变参数模板与模板模板参数.md
+++ b/5.泛型/5.可变参数模板与模板模板参数.md
@@ -1,4 +1,4 @@
-
+## 可变参数模板
 ```cpp
 // 出口函数
 void print(){}
@@ -14,3 +14,5 @@ void print(const T& firstArg,const Types&... Args){
 > - `...`用于函数参数，是一个函数参数包
 > - `...`用于函数参数类型，是一个函数参数类型包
 > - `sizeof...(Args)`，参数数量
+
+## 模板模板参数
