--- a/8.STL标准库/标准容器的操作.md
+++ b/8.STL标准库/标准容器的操作.md
@@ -62,9 +62,9 @@ iter1 - iter2 //距离
 能自动遍历整个容器（数组、`vector`对象等），不需要知道数组的长度，语句简洁
 ```cpp
 //遍历数组的元素
-int arr[] = {1, 2, 3, };
-for(int &e:arr){//改变数组元素的值，所以用引用
-e += 2;
-std::cout << e << std::endl;
+int arr[] {1, 2, 3, };
+for(auto& elem:arr){//改变数组元素的值，所以用引用
+elem += 2;
+std::cout << elem << std::endl;
 }
 ```
