--- a/2.基础/8.数组、指针与引用.md
+++ b/2.基础/8.数组、指针与引用.md
@@ -4,6 +4,8 @@
 
 ## 2. 指针
 **概念**：指针是一个变量，其值为另一个变量的内存地址
+#### 指针类型
+#### 指针指向的类型
 > 1. 指针的大小是固定的，在32为系统中为4个字节，64位系统中为8个字节
 > 2. 指针的类型决定了指针运算的内存偏移量(包括`*`, `+`, `-`, `++`, `--`)
 > 3. 指针的类型必须与所指对象的类型一致。两个例外：
