--- a/3.类与对象/3.成员类型关键词.md
+++ b/3.类与对象/3.成员类型关键词.md
@@ -59,7 +59,7 @@ void Clock::gethour() const{
 mutable bool flag;
 ```
 
-### [`static`关键词](..\1.编译与链接\2.编译预处理.md)
+### [`static`关键词](../1.编译与链接/4.extern和static.md)
 > ==static数据或函数成员在整个程序中只能有唯一定义==
 
 #### 静态成员变量
