--- a/4.TCP-IP详解/6.socket网络编程.md
+++ b/4.TCP-IP详解/6.socket网络编程.md
@@ -5,14 +5,17 @@
 网络中的进程是通过`socket`来通信的，那什么是`socket`呢？`socket`起源于Unix，而Unix/Linux基本哲学之一就是“一切皆文件”，都可以用`open` –> `write/read` –> `close`模式来操作。
 ## 1.2 网络中进程之间如何通信？
 `socket`是一个五元组
+
 | 源IP：源端口 | 目的IP：目的端口 | 协议(UDP/TCP) |
 | ------------ | ---------------- | ------------- |
+
+
 就可以标识网络的进程了，网络中的进程通信就可以利用这个标志与其它进程进行交互。
 
 ## 1.3 socket流程
 ![socket流程](https://i.loli.net/2020/04/13/qrHvgsVoyhZBSEF.png)
 
-> Tips:在Linux上，可使用man命令去查询每一个函数或者头文件
+> Tips:在Linux上，可使用`man`命令去查询每一个函数或者头文件
 
 ### 生成套接字`socket()`
 
